# sents

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  DEPLOYING.md  Makefile  README.md  config.example.yaml  docker-compose.home.yml  docker-compose.prod.yml  docker-compose.yml  mockup.html  ruff.toml
.claude/: settings.local.json
.claude/commands/: spec-kitty.accept.md
.github/workflows/: ci.yml  deploy.yml  worker-ci.yml
.kittify/: .dashboard  metadata.yaml
.kittify/memory/: constitution.md
.kittify/missions/software-dev/: mission.yaml
.kittify/workspaces/: 001-resilient-reddit-sentiment-scraping-pipeline-WP01.json  001-resilient-reddit-sentiment-scraping-pipeline-WP02.json
api/: Dockerfile  requirements.txt
api/src/: dashboard.html  dashboard_v2.html  epic_dashboard.html  main.py
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  main.py  subscriber.py  utils.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  market.py  pricing.py  stream.py  tickers.py
backend/app/core/: config.py  limiter.py
backend/app/db/: pool.py  redis_client.py
backend/app/schemas/: __init__.py
backend/app/services/: sse_manager.py
backend/tests/: conftest.py  test_health.py  test_pricing.py
database/: alembic.ini  backup.sh  init.sql
database/migrations/: env.py
database/migrations/versions/: 001_initial_schema.py  002_continuous_aggregate.py  003_pricing_configurations.py
database/scripts/: README.md  create_users.sql
docs/: architecture-overview.md  local-dev-setup.md  operations-runbook.md  security.md
docs/specs/: architecture.md  design.md  plan.md  progress.md  requirements.md
frontend/: Dockerfile  index.html  nginx-spa.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChartLegend.tsx  DivergenceGauge.tsx  MarketTable.tsx  ScenarioSelector.tsx  ShiftControl.tsx  SparklineChart.tsx  StalenessIndicator.tsx  TickerChart.tsx  TickerDetail.tsx  TimeframeSelector.tsx
frontend/src/hooks/: useMarketSSE.ts  useSSE.ts  useTickerSSE.ts
frontend/src/types/: api.ts
kitty-specs/001-resilient-reddit-sentiment-scraping-pipeline/: data-model.md  meta.json  plan.md  research.md  spec.md  tasks.md
kitty-specs/001-resilient-reddit-sentiment-scraping-pipeline/checklists/: requirements.md
kitty-specs/001-resilient-reddit-sentiment-scraping-pipeline/contracts/: classifier-interface.md  schema.sql  (+1 more)
mockups/: README.md  a-neon-punk.html  b-editorial.html  c-brutalist.html  d-terminal.html  index.html
nginx/: nginx.conf
plans/: 01_scraping_pipeline.md  02_sentiment_analysis.md  02b_sentiment_processor_service.md  02c_pricing_engine_service.md  03_backend_api.md  04_frontend_ui.md  05_infrastructure.md  06_cicd.md  07_test_plan.md  08_ui_design.md  decisions.md
plans/review/: amendments_critical.md  amendments_moderate.md  amendments_performance.md  gap_analysis.md
pricing_engine/: Dockerfile  pyproject.toml
pricing_engine/src/pricing_engine/: config.py  health.py  main.py
pricing_engine/src/pricing_engine/fetcher/: __init__.py  real_prices.py
pricing_engine/src/pricing_engine/formula/: __init__.py  engine.py
pricing_engine/src/pricing_engine/publisher/: __init__.py
pricing_engine/tests/: conftest.py  test_config_loading.py  test_formula.py
processor/: Dockerfile  pyproject.toml
processor/src/processor/: config.py  main.py
processor/src/processor/pipeline/: pipeline.py
processor/src/processor/sentiment/: finbert_backend.py  textblob_backend.py  vader_backend.py
processor/src/processor/text/: emoji_map.py  preprocessor.py  slang_dict.py
processor/tests/: conftest.py  test_preprocessor.py  test_textblob.py  test_vader.py
scraper/: Dockerfile  pyproject.toml
scraper/src/scraper/: config.py  main.py
scraper/src/scraper/reddit/: client.py
scraper/src/scraper/scheduler/: __init__.py
scraper/src/scraper/storage/: db.py
scraper/tests/: conftest.py  test_quality_filter.py  test_reddit_client.py
spec/: spec_text.txt
sse_common/: pyproject.toml
sse_common/sse_common/: __init__.py  channels.py  constants.py  health.py  logging_config.py
worker/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
worker/migrations/: env.py
worker/migrations/versions/: 0001_initial_schema.py  0002_add_comments_processed.py  0003_add_signal_content_type.py  0004_add_signal_reply_count.py  0005_add_signal_thread_url.py
worker/src/: __main__.py  backfill.py  config.py  logging_config.py  main.py
worker/src/alerting/: __init__.py  threshold.py
worker/src/classifiers/: __init__.py  base.py  epic_rules.py  vader.py
worker/src/pipeline/: queue.py  runner.py  scheduler.py
worker/src/scrapers/: __init__.py  base.py  json_endpoint.py  praw_oauth.py
worker/src/storage/: __init__.py  models.py  runs.py  signals.py  sources.py
worker/src/tickers/: disambiguator.py  extractor.py
worker/src/tickers/data/: false_positive_blocklist.txt  ticker_universe.txt
worker/src/topics/: __init__.py  epic_games_store.py  storefronts.py
worker/tests/: conftest.py  test_scaffold.py
worker/tests/fixtures/: __init__.py  reddit_new.json  reddit_responses.py
worker/tests/integration/: test_pii_audit.py  test_pipeline_e2e.py  test_source_isolation.py  test_storage.py
worker/tests/unit/test_alerting/: __init__.py  test_coverage_supplement.py  test_pii_filter.py  test_runner_alerting.py  test_sentry.py  test_threshold.py
worker/tests/unit/test_classifiers/: test_epic_rules.py  test_factory.py  test_vader.py
worker/tests/unit/test_pipeline/: test_alerting.py  test_config.py  test_queue.py  test_runner.py  test_scheduler.py
worker/tests/unit/test_scrapers/: test_json_endpoint.py  test_praw_oauth.py
worker/tests/unit/test_storage/: test_models.py  test_runs.py  test_signals.py  test_sources.py
worker/tests/unit/test_tickers/: test_disambiguator.py  test_extractor.py
worker/tests/unit/test_topics/: test_epic_games_store.py  test_storefronts.py
(+12 files in other folders)
