[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sse-backend"
version = "0.1.0"
description = "FastAPI backend for Sentiment Stock Exchange"
requires-python = ">=3.11"
dependencies = [
    "sse-common",
    "fastapi>=0.113.0",
    "uvicorn[standard]>=0.30.6",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.8",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
sse-api = "app.main:create_app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
