[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sse-processor"
version = "0.1.0"
description = "NLP sentiment processor for Sentiment Stock Exchange"
requires-python = ">=3.11"
dependencies = [
    "sse-common",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.8",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "vaderSentiment>=3.3.2",
    "textblob>=0.18.0",
    "numpy>=1.26.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
finbert = [
    "transformers>=4.44.0",
    "torch>=2.4.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/processor"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
