[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sse-common"
version = "0.1.0"
description = "Shared constants, channels, and logging for SSE services"
requires-python = ">=3.11"
dependencies = []  # intentionally zero runtime dependencies

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["sse_common"]

[tool.ruff]
line-length = 100
target-version = "py311"
